some visual changes
linked in link added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						<li><a href="https://www.facebook.com/venkat.pandey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/venkat.pandey/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/Venkatpandey" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
