--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@ Development of prototype web application for handling Radiology Report Templates
 									<h3>Contact</h3>
 									<p>My Other Social Media Profiles</p>
 							<ul class="icons">
-						<li><a href="https://twitter.com/pandey_venkat" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/venkat.pandey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://twitter.com/pandey_venkat" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/venkat.pandey" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
 						<!--<li><a href="https://plus.google.com/+VenkatRamanPandey/" class="icon fa-google-plus"><span class="label">Google+</span></a></li>-->
-						<li><a href="https://www.instagram.com/venkat.pandey/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/Venkatpandey" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing"><span class="label">Xing</span></a></li>
-						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.instagram.com/venkat.pandey/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/Venkatpandey" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank"><span class="label">Xing</span></a></li>
+						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 						</ul>
 							</div>
 							</section>
