--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Venkat Raman Pandey</title>
+	<!-- 	<title>Venkat Raman Pandey</title> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,8 +26,7 @@
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
-				</nav>
-				
+				</nav>		
 			</section>
 
 		<!-- Wrapper -->
@@ -143,5 +142,20 @@ Development of prototype web application for handling Radiology Report Templates
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 			<script type="text/javascript">stLight.options({publisher: "b5e5ab6b-debe-45e7-a9c9-83e74bf09601", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+			<script language="JavaScript">
+			var space = " ";
+			var speed = "100";
+			var pos = 0;
+			var msg = "Venkat Raman Pandey";
+			function Scroll()
+			{
+			document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
+			pos++;
+			if (pos > msg.length) pos = 0;
+			window.setTimeout("Scroll()", speed);
+			}
+			Scroll();
+
+			</script>
 	</body>
 </html>
