--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ Development of prototype web application for handling Radiology Report Templates
 						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank"><span class="label">Xing</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+						<li><a href="CV-Venkat Pandey-EN.pdf" class="download" title="Download Resume"  download="CV-Venkat Pandey-EN">Resume</a></li>
 						</ul>
 							</div>
 							</section>
