--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 										<li>.NET C#, WPF, ASP.Net</li>
 										<li>HTML, CSS, PHP, JavaScript, Angular.js</li>
 										<li>MS SQL, MongoDB, XML, ElasticSearch</li>
+										<li>Software Architectural Pattern: - MVC, MVVM</li>
 										<li>Version Control - Git, Team Foundation Server</li>
 										<li>Project Management and Organisational skills, Agile Methodologies</li>
 										<li>Semantics Searching, Artificial Intelligence, Natural Language Processing </li>
