quote and header changed
quote and header updated

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>Welcome</h2>
-										<p>The man who moves a mountain begins by carrying away small stones. – Confucius</p>
+										<p>If you are successful, you will win false friends and true enemies.Succeed anyway. -  Kent M. Keith, The Paradoxical Commandments</p>
 									</header>
-									<p>A Master student at <a href="http://www.hochschule-heidelberg.de/en/">SRH University of Applied Science</a>, Heidelberg , doing Master Thesis Work at <a href="http://www.healthcare.siemens.com/">Siemens Healthcare GmbH</a> and currently looking for entry level permanent position. </p>
-									<p>"I am from New Delhi, India and currently living in Erlangen, Germany. I am keenly interested in opportunities where I can gain hands-on experience in a real world project where I can be a bridge between the business problems and the technology solutions and support and I can grow my skills." </p> 
+									<p>A Masters graduate from <a href="http://www.hochschule-heidelberg.de/en/">SRH University of Applied Science</a>, Heidelberg , currently working as PHP developer at <a href="http://www.iceservices.com/">ICE International Copyright Enterprise GmbH</a>. </p>
+									<p>"I am from New Delhi, India and currently living in Berlin, Germany. I am keenly interested in opportunities where I can gain hands-on experience in a real world project where I can be a bridge between the business problems and the technology solutions and support and I can grow my skills." </p> 
 								</div>
 							</section>
 
