--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Welcome</h2>
-										<p>If you are successful, you will win false friends and true enemies. Succeed anyway. <h1>- Kent M. Keith, The Paradoxical Commandments</h1> </p>
+										<p>If you are successful, you will win false friends and true enemies. Succeed anyway. <span class='small'> - Kent M. Keith, The Paradoxical Commandments </span> </p>
 									</header>
 									<p>A Masters graduate from <a href="http://www.hochschule-heidelberg.de/en/">SRH University of Applied Science</a>, Heidelberg , currently working as PHP developer at <a href="http://www.iceservices.com/">ICE International Copyright Enterprise GmbH</a>. </p>
 									<p>"I am from New Delhi, India and currently living in Berlin, Germany. I am keenly interested in opportunities where I can gain hands-on experience in a real world project where I can be a bridge between the business problems and the technology solutions and support and I can grow my skills." </p> 
