--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <h4>Software Development @ ICE</h4>
 <b><i>PHP Developer | ICE International Copyright Enterprise GmbH | April 2016 - Till Date</i></b>
 <div class="">
-<p>Contribute to all aspects if the software life cycle from analysis,<br>
+<p>Contribute to all aspects if the software life cycle from analysis,
 design, development, build and test to release, maintenance and support. <br>
 Software development in PHP and JavaScript languages. <br>
 Promote code for User Acceptance Test and support testing efforts.<br>
