--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ IDEA: To filter/extract out meaningful data from the data provided by FHIR</p>
 												<article>
 											
 											
-												<h4>Web Application for handling Radiological Report Templates</h4>
+												<h4>Data Mining Concept for analysing Radiological Report</h4>
 												<b><i>Working Student (Data Mining) | Siemens AG | May 2015 - August 2015</i></b>
 												<div class="">
 												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data. <br>
