--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ IDEA: To filter/extract out meaningful data from the data provided by FHIR</p>
 												<b><i>Working Student (Data Mining) | Siemens AG | May 2015 - August 2015</i></b>
 												<div class="">
 												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data. <br>
- 													<br>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop
+ 													<p>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop
 </p>
 											</div>
 										</article>
