--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@ IDEA: To filter/extract out meaningful data from the data provided by FHIR</p>
 												<h4>Data Mining Concept for analysing Radiological Report</h4>
 												<b><i>Working Student (Data Mining) | Siemens AG | May 2015 - August 2015</i></b>
 												<div class="">
-												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data. <br>
- 													<p>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop
-</p>
+												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data.
+ 												<p>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop</p>
 											</div>
 										</article>
 										<article>
