--- a/index.html
+++ b/index.html
@@ -95,13 +95,11 @@ IDEA: To filter/extract out meaningful data from the data provided by FHIR</p>
 											</div>
 										</article>
 												<article>
-											
-											
 												<h4>Data Mining Concept for analysing Radiological Report</h4>
 												<b><i>Working Student (Data Mining) | Siemens AG | May 2015 - August 2015</i></b>
 												<div class="">
-												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data.
- 												<p>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop</p>
+												<p>Development of prototype of Data miner using R to enable Correlations, Clustering, Modelling and further Evaluation of and Radiological data.</p>
+													<p>R, Data Visualization, Data Transformation, ETL, MySQL, Hadoop</p>
 											</div>
 										</article>
 										<article>
@@ -133,7 +131,7 @@ Development of prototype web application for handling Radiology Report Templates
 						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank" title="To LinkedIn Profile"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank" title="To XING Profile"><span class="label">Xing</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank" title="E-Mail Me"><span class="label">Email</span></a></li>
-						<li><a href="CV-Venkat Pandey-EN.pdf" class="download" title="Download Resume"  download="CV-Venkat-Pandey-EN_DS">Resume</a></li>
+						<li><a href="CV-Venkat Pandey-EN.pdf" class="download" title="Download Resume"  download="CV-Venkat-Pandey-EN_DS.pdf">Resume</a></li>
 						</ul>
 							</div>
 							</section>
