--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Development of prototype web application for handling Radiology Report Templates
 						<li><a href="https://www.facebook.com/venkat.pandey" class="icon fa-facebook" target="_blank" title="To Facebook Profile"><span class="label">Facebook</span></a></li>
 						<!--<li><a href="https://plus.google.com/+VenkatRamanPandey/" class="icon fa-google-plus"><span class="label">Google+</span></a></li>-->
 						<li><a href="https://www.instagram.com/venkat.pandey/" class="icon fa-instagram" target="_blank" title="To Instagram Profile"><span class="label">Instagram</span></a></li>
-						<li><a href="https://gitlab.com/Venkatpandey" class="icon fa-gitlab" target="_blank" title="To GitLab Profile"><span class="label">GitLab</span></a></li>
+						<li><a href="https://gitlab.com/Venkatpandey" class="icon fa-github" target="_blank" title="To GitLab Profile"><span class="label">GitLab</span></a></li>
 						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank" title="To LinkedIn Profile"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank" title="To XING Profile"><span class="label">Xing</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank" title="E-Mail Me"><span class="label">Email</span></a></li>
