--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/venkat.jpg" alt="" /></span>
-					<h1 id="logo"><a href="http://venkatramanpandey.me/index.html">Venkat Raman Pandey</a></h1>
+					<h1 id="logo"><a href="http://venkat-pandey.com/index.html">Venkat Raman Pandey</a></h1>
 					<p>A Student, Software Developer,<br />
 					passionate Photographer and Traveller</p>
 				</header>
