new profile added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<header>
 			<span class="image avatar"><img src="images/venkat.jpg" alt="" /></span>
 			<h1 id="logo"><a href="http://venkat-pandey.com/index.html">Venkat Raman Pandey</a></h1>
-			<p>A Student, Software Developer,<br />
+			<p>A Student, Software Professional,<br />
 			passionate Photographer and Traveller</p>
 		</header>
 		<nav id="nav">
@@ -60,6 +60,29 @@
 			<!-- Two -->
 			<section id="two">
 				<div class="container">
+					<h3>Data Science Experience and Skills</h3>
+					<p></p>
+					<ul>
+						<b>End to End cycles of the data science</b>
+<li>Data Wrangling (Cleaning & Ingestion)</li>
+<li>Feature Engineering (Statistical analysis based feature selection)</li>
+<li>Model Training (Machine & Deep Learning, HyperParameter Tuning,</li>
+<li>GridSearch)</li>
+<li>Model Validation (Performance Evaluation)</li>
+<li>Model Deployment (AWS Cloud)</li>
+<b>Tools</b>
+<li>SQL, Python (pandas, numpy, sklearn, tensorflow, scipy, matplotlib, seaborn,</li>
+<li>feature_engine, mlxtend, flask), Jupyter Notebook, spyder, Linux, Apache</li>
+<li>Spark (pyspark, MLLib), conda, pip, AWS SageMaker, Google Colaboratory</li>
+<b>My Data Science Repo</b>
+<li>https://github.com/Venkatpandey/DataScience_ML</li>
+<li>https://github.com/Venkatpandey/AmazonSageMakerCourse</li>
+<b>Course & certifications</b>
+<li>Feature Selection for Machine Learning</li>
+<li>Machine Learning, Data Science and Deep Learning with Python</li>
+<li>AWS Certified Machine Learning Specialty (MLS-C01)</li>
+					</ul>
+					<br>
 					<h3>Things I Can Do</h3>
 					<p></p>
 					<ul>
@@ -187,7 +210,7 @@
 						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank" title="To LinkedIn Profile"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank" title="To XING Profile"><span class="label">Xing</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank" title="E-Mail Me"><span class="label">Email</span></a></li>
-						<li><a href="CV_VenkatRPandey.pdf" class="download" title="Download Resume"  download="CV_VenkatRPandey">Resume</a></li>
+						<li><a href="CV_VenkatRPandey_DS.pdf" class="download" title="Download Resume"  download="CV_VenkatRPandey_DS">Resume</a></li>
 					</ul>
 				</div>
 			</section>
