--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
 					<h4>Software Development @ ICE</h4>
 					<div class="features">
 						<article>
+							<b><i>Senior Software Engineer | Docomno Digital GmbH | June 2021 - Till Date</i></b>
+							<div class="">
+								<p>Development of Direct Carrier Billing software application system, 
+									processing 300k+ transactions/hr and serving millions of users worldwide.
+									Contributing in all phases of the development life-cycle.
+									Improved system stability by introducing mechanisms to prevent 
+									redundant job execution in multi node environments.
+									Stack & Tools: JAVA, Spring, SpringBoot, Hazelcast, JPA, Junit, Kafka, 
+									Postgresql, ELK, SOAP, REST, Tomcat, Maven, SOAPUI, LINUX, Intellij, 
+									Bitbucket (Git), JIRA, Confluence, Jenkins</p>
+							</div>
 							<b><i>Senior Developer | ICE International Copyright Enterprise GmbH | March 2020 - Till Date</i></b>
 							<div class="">
 								<p>Development of ICE Online Licensing System, and ICE Online Import System.<br>
