--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									Postgresql, ELK, SOAP, REST, Tomcat, Maven, SOAPUI, LINUX, Intellij, 
 									Bitbucket (Git), JIRA, Confluence, Jenkins</p>
 							</div>
-							<b><i>Senior Developer | ICE International Copyright Enterprise GmbH | March 2020 - Till Date</i></b>
+							<b><i>Senior Developer | ICE International Copyright Enterprise GmbH | March 2020 - May 2021</i></b>
 							<div class="">
 								<p>Development of ICE Online Licensing System, and ICE Online Import System.<br>
 									Contributing in all phases of the development life-cycle.<br>
