--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 						<article>
 							<b><i>Senior Software Engineer | Docomno Digital GmbH | June 2021 - Till Date</i></b>
 							<div class="">
-								<p>Development of Direct Carrier Billing software application system, 
-									processing 300k+ transactions/hr and serving millions of users worldwide.
-									Contributing in all phases of the development life-cycle.
-									Improved system stability by introducing mechanisms to prevent 
-									redundant job execution in multi node environments.
-									Stack & Tools: JAVA, Spring, SpringBoot, Hazelcast, JPA, Junit, Kafka, 
-									Postgresql, ELK, SOAP, REST, Tomcat, Maven, SOAPUI, LINUX, Intellij, 
+								<p>Development of Direct Carrier Billing software application system,<br>
+									processing 300k+ transactions/hr and serving millions of users worldwide.<br>
+									Contributing in all phases of the development life-cycle.<br>
+									Improved system stability by introducing mechanisms to prevent<br>
+									redundant job execution in multi node environments.<br>
+									Stack & Tools: JAVA, Spring, SpringBoot, Hazelcast, JPA, Junit, Kafka,<br>
+									Postgresql, ELK, SOAP, REST, Tomcat, Maven, SOAPUI, LINUX, Intellij,<br>
 									Bitbucket (Git), JIRA, Confluence, Jenkins</p>
 							</div>
 							<b><i>Senior Developer | ICE International Copyright Enterprise GmbH | March 2020 - May 2021</i></b>
