--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <li>feature_engine, mlxtend, flask), Jupyter Notebook, spyder, Linux, Apache</li>
 <li>Spark (pyspark, MLLib), conda, pip, AWS SageMaker, Google Colaboratory</li>
 <b>My Data Science Repo</b>
-<li>https://github.com/Venkatpandey/DataScience_ML</li>
-<li>https://github.com/Venkatpandey/AmazonSageMakerCourse</li>
+<li> <a href = "https://github.com/Venkatpandey/DataScience_ML" target="_blank" title="Click to Follow GitHub/DataScience_ML"><span>GitHub/DataScience_ML</span></a></li>
+<li> <a href = "https://github.com/Venkatpandey/AmazonSageMakerCourse" target="_blank" title="Click To Follow GiHub/AWS_SageMaker"><span>GiHub/AWS_SageMaker</span></a></li>
 <b>Course & certifications</b>
 <li>Feature Selection for Machine Learning</li>
 <li>Machine Learning, Data Science and Deep Learning with Python</li>
@@ -86,18 +86,17 @@
 					<h3>Things I Can Do</h3>
 					<p></p>
 					<ul>
-						<li>Primary (4+ years): Java, PHP</li>
-						<li>JavaScript, SQL, Bash, HTML</li>
-						<li>CSS, XML, Apache Spark, Scala</li>
+						<li>Primary (4+ years): Java, Python</li>
+						<li>SQL, Bash, ML, DL</li>
+						<li>XML, Apache Spark, Scala</li>
 						<li>Hadoop,ETL, MVC, OOP</li>
 						<li>Software Development best practices: TDD, DDD, Agile</li>
-						<li>CI/CD, Microservices, MVC, REST</li>
+						<li>CI/CD, Microservices, Containers, MVC, REST</li>
 						<li>Unit Testing, Integration testing</li>
 						<li>Strong analytical and problem-solving skills</li>
 						<li>Project organisational and Planning skills</li>
 						<li>Agile methodologies</li>
-						<li>Secondary : TypeScript, Python, Bash/Shell Scripting</li>
-						<li>DevOps, UI / UX</li>
+						<li>Secondary : TypeScript, DevOps, MLOps</li>
 					</ul>
 					<br>
 					<h3>Tools I am Using</h3>
@@ -106,11 +105,9 @@
 						<li>GitHub, Slack, JIRA, Wiki</li>
 						<li>Confluence, Git, IntelliJ, Kanban</li>
 						<li>AWS, Jenkins, Java Spring</li>
-						<li>Maven, jUnit, Angular 7, jQuery</li>
-						<li>Bootstrap, MySQL, PostgreSQL</li>
-						<li>SQL Developer, OS X</li>
-						<li>Ubuntu/Debian Linux, Windows</li>
-						<li>Server 2008/2012</li>
+						<li>Maven, jUnit</li>
+						<li>MySQL, PostgreSQL</li>
+						<li>SQL Developer, Unix, Windows</li>
 					</ul>
 				</div>
 			</section>
