--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 			<section id="three">
 				<div class="container">
 					<h3>A Few Accomplishments</h3>
-					<p>Some of the recent Projects that I have done</p>
-					<h4>Software Development @ ICE</h4>
+					<h4>Software Development </h4>
 					<div class="features">
 						<article>
 							<b><i>Senior Software Engineer | Docomno Digital GmbH | June 2021 - Till Date</i></b>
@@ -131,6 +130,8 @@
 									Postgresql, ELK, SOAP, REST, Tomcat, Maven, SOAPUI, LINUX, Intellij,<br>
 									Bitbucket (Git), JIRA, Confluence, Jenkins</p>
 							</div>
+						</article>
+						<article>
 							<b><i>Senior Developer | ICE International Copyright Enterprise GmbH | March 2020 - May 2021</i></b>
 							<div class="">
 								<p>Development of ICE Online Licensing System, and ICE Online Import System.<br>
@@ -218,7 +219,7 @@
 						<li><a href="https://www.linkedin.com/in/venkatramanpandey" class="icon fa-linkedin" target="_blank" title="To LinkedIn Profile"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://www.xing.com/profile/VenkatRaman_Pandey" class="icon fa-xing" target="_blank" title="To XING Profile"><span class="label">Xing</span></a></li>
 						<li><a href="mailto:venkat.pandey@gmx.com" class="icon fa-envelope" target="_blank" title="E-Mail Me"><span class="label">Email</span></a></li>
-						<li><a href="CV_VenkatRPandey_DS.pdf" class="download" title="Download Resume"  download="CV_VenkatRPandey_DS">Resume</a></li>
+						<!--<li><a href="CV_VenkatRPandey_DS.pdf" class="download" title="Download Resume"  download="CV_VenkatRPandey_DS">Resume</a></li>-->
 					</ul>
 				</div>
 			</section>
