--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<p>If you are successful, you will win false friends and true enemies. Succeed anyway. <span class='small'> - Kent M. Keith, The Paradoxical Commandments </span> </p>
 					</header>
 					<p>A Masters graduate from <a href="http://www.hochschule-heidelberg.de/en/">SRH University of Applied Science</a>, Heidelberg , currently working as Software developer at <a href="http://www.iceservices.com/">ICE International Copyright Enterprise GmbH</a>. </p>
-					<p>"I am from New Delhi, India and currently living in Berlin, Germany. I am keenly interested in opportunities where I can gain hands-on experience in a real world project where I can be a bridge between the business problems and the technology solutions and support and I can grow my skills." </p> 
+					<p>"I am from New Delhi, India and currently living in Düsseldorf, Germany. I am keenly interested in opportunities where I can gain hands-on experience in a real world project where I can be a bridge between the business problems and the technology solutions and support and I can grow my skills." </p> 
 				</div>
 			</section>
 
@@ -119,7 +119,7 @@
 					<h4>Software Development </h4>
 					<div class="features">
 						<article>
-							<b><i>Senior Software Engineer | Docomno Digital GmbH | June 2021 - Till Date</i></b>
+							<b><i>Senior Software Engineer | Docomo Digital GmbH | June 2021 - Till Date</i></b>
 							<div class="">
 								<p>Development of Direct Carrier Billing software application system,<br>
 									processing 300k+ transactions/hr and serving millions of users worldwide.<br>
